fix gap in keypad

--- a/calculator.css
+++ b/calculator.css
@@ -1,6 +1,29 @@
-#calculator {
+.flex-container {
+    display: flex;
+    flex-direction: column;
+
+
+    height: 500px;
+    width: 500px;
+
+    border: 2px solid black;
 }
 
-.box {
-    border: 1px solid;
+.screen {
+    width: 500px;
+    height: 100px;
+    border: inherit;
+}
+
+.cell-rows {
+    display: flex;
+    flex-direction: row;
+    /* border: inherit; */
+}
+
+.cell-rows div {
+    height: 95px;
+    width: 121px;
+    border: 2px solid black;
+    /* flex: 1 1 auto; */
 }
